# MixerX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cc  main.cc  main.cpp
.github/ci-helper/support/: dmg-license.py
.github/workflows/: build.yml
cmake/: Library_GL.cmake  Library_GLM.cmake  Library_SDL2.cmake  Library_SDL2_Mixer_X.cmake  Library_SDL2_image.cmake  Library_SDL2_ttf.cmake  Library_Spdlog.cmake  install_SDL2.cmake  install_SDL2_test.cmake  install_SDL_MixerX.cmake  library_SDLMixerX.cmake  test.cmake
include/: pch.hpp
include/Core/: MissingTextureBase64.hpp
include/Util/: Base64.hpp  Color.hpp  GameObject.hpp  Image.hpp  MissingTexture.hpp  Renderer.hpp  SpriteSheet.hpp
resources/: thextech.plist.in
src/: main.cpp
src/Util/: Image.cpp  Renderer.cpp  SpriteSheet.cpp  issingTexture.cpp
